fixes spacing on navbar

--- a/static/stylesheets/navbar.css
+++ b/static/stylesheets/navbar.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Staatliches');
 #navbar a {
     padding-left: .5em;
+    display: inline-block;
 }
 #navbar a:hover {
     text-decoration: underline;
